refactor(validation): check command input before model resolution
Move structural checks onto commands and concrete values using Jakarta constraints. Retain state and publication-time rules at their existing boundaries, and let malformed collection input reach validation without losing immutable snapshots.