@@ -2,9 +2,14 @@ package io.fluxzero.home.model;
 
 import com.fasterxml.jackson.annotation.JsonSubTypes;
 import com.fasterxml.jackson.annotation.JsonTypeInfo;
+import jakarta.validation.constraints.NotEmpty;
+import jakarta.validation.constraints.NotNull;
+
 import java.time.DayOfWeek;
 import java.time.Instant;
 import java.time.LocalTime;
+import java.util.Collections;
+import java.util.LinkedHashSet;
 import java.util.Set;
 
 /** A one-off moment or a weekly local-time rhythm, independent of machine time. */
@@ -15,15 +20,16 @@ import java.util.Set;
 })
 public sealed interface RoutineTiming {
     Instant nextAfter(Instant after, java.time.ZoneId zone);
-    record Once(Instant at) implements RoutineTiming {
-        public Once { java.util.Objects.requireNonNull(at); }
+    record Once(@NotNull Instant at) implements RoutineTiming {
         public Instant nextAfter(Instant after, java.time.ZoneId zone) { return at.isAfter(after) ? at : null; }
     }
     /** Missing spring-clock times are skipped; an autumn overlap executes at its first occurrence only. */
-    record Weekly(Set<DayOfWeek> days, LocalTime time) implements RoutineTiming {
-        public Weekly { days = Set.copyOf(days); java.util.Objects.requireNonNull(time); }
+    record Weekly(@NotEmpty(message = "Choose at least one day of the week.") Set<@NotNull DayOfWeek> days,
+                  @NotNull LocalTime time) implements RoutineTiming {
+        public Weekly {
+            days = days == null ? null : Collections.unmodifiableSet(new LinkedHashSet<>(days));
+        }
         public Instant nextAfter(Instant after, java.time.ZoneId zone) {
-            Rules.require(!days.isEmpty(), "Choose at least one day of the week.");
             var start = after.atZone(zone).toLocalDate();
             // Fourteen days also cover a chosen weekday whose clock time does not exist this week.
             for (int offset = 0; offset <= 14; offset++) {
